removes container overflow fix

--- a/wp-content/themes/hodgesmace/style.css
+++ b/wp-content/themes/hodgesmace/style.css
@@ -215,7 +215,6 @@ form {
 .site-content .cq-bannerblock-content {
     width: 100%;
     padding: 0 20px;
-    overflow: visible;
     margin-left: auto;
     margin-right: auto;
 }
